--- a/public/cook.css
+++ b/public/cook.css
@@ -1,8 +1,32 @@
 body {
-    background-color: darkslategrey;
+    background-color: #2f4f4f;
     text-align: center;
+    font-family: 'Satisfy', cursive;
 }
 
-h1, h2, h3, h4, p{
-    color: rgb(205, 149, 86);
+h1, h2, h3, h4, h5, p, form{
+    color: #c8975f;
+}
+
+h1 {
+    margin-left: 3px;
+    font-size: 45px;
+}
+
+p, a, form {
+    font-size: 28px;
+}
+
+.navbar {
+    background-color: #44631c;
+}
+
+.btn {
+    background-color: #41add7;
+    margin: 2px;
+    font-size: 28px;
+}
+
+a:link, a:visited, a:hover, a:active  {
+    text-decoration: none;
 }
